管理者ログイン修正

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmartBuilder AI</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🤖</text></svg>">
+    <!-- Tailwind CSS CDN (開発・プロトタイプ用) -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        // Tailwind CSS警告を非表示
+        tailwind.config = {
+            theme: {
+                extend: {}
+            }
+        }
+    </script>
     <style>
         .hidden { display: none !important; }
         
